--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,5 +13,5 @@ FetchContent_MakeAvailable(casein)
 find_package(SDL2 REQUIRED)
 
 add_executable(oto MACOSX_BUNDLE WIN32)
-target_sources(oto PRIVATE src/main.cpp)
+target_sources(oto PRIVATE src/main.cpp src/sdl.cpp)
 target_link_libraries(oto PUBLIC casein SDL2::SDL2-static)
