doodling a C++ equivalent of scene metas

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,10 @@ FetchContent_MakeAvailable(casein)
 
 find_package(SDL2 REQUIRED)
 
-add_executable(oto MACOSX_BUNDLE WIN32)
+add_library(oto STATIC)
 target_sources(oto PRIVATE src/main.cpp src/sdl.cpp)
 target_link_libraries(oto PUBLIC casein-sdl)
+
+add_executable(poc MACOSX_BUNDLE WIN32)
+target_sources(poc PRIVATE test/poc.cpp)
+target_link_libraries(poc PRIVATE oto)
