preparing POC for extra tools

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,10 +22,14 @@ add_executable(poc MACOSX_BUNDLE WIN32)
 target_sources(poc PRIVATE test/poc.cpp)
 target_link_libraries(poc PRIVATE oto)
 
-add_executable(poc-yaml)
-target_sources(poc-yaml PRIVATE test/poc-yaml.cpp)
-target_link_libraries(poc-yaml PRIVATE oto)
+function(dumper)
+  add_executable(poc-yaml)
+  target_sources(poc-yaml PRIVATE test/poc-yaml.cpp)
+  target_link_libraries(poc-yaml PRIVATE oto)
 
-add_test(NAME poc-yaml-create COMMAND poc-yaml)
-add_test(NAME poc-yaml-compare COMMAND ${CMAKE_COMMAND} -E compare_files ${CMAKE_CURRENT_SOURCE_DIR}/test/poc.yaml poc.yaml)
-set_tests_properties(poc-yaml-compare PROPERTIES DEPENDS poc-yaml-create)
+  add_test(NAME poc-yaml-create COMMAND poc-yaml)
+  add_test(NAME poc-yaml-compare COMMAND ${CMAKE_COMMAND} -E compare_files ${CMAKE_CURRENT_SOURCE_DIR}/test/poc-yaml.yaml poc-yaml.yaml)
+  set_tests_properties(poc-yaml-compare PROPERTIES DEPENDS poc-yaml-create)
+endfunction()
+
+dumper()
