asset dumper in c++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,14 +22,15 @@ add_executable(poc MACOSX_BUNDLE WIN32)
 target_sources(poc PRIVATE test/poc.cpp)
 target_link_libraries(poc PRIVATE oto)
 
-function(dumper)
-  add_executable(poc-yaml)
-  target_sources(poc-yaml PRIVATE test/poc-yaml.cpp)
-  target_link_libraries(poc-yaml PRIVATE oto)
+function(dumper NAME)
+  add_executable(poc-${NAME})
+  target_sources(poc-${NAME} PRIVATE test/poc-${NAME}.cpp)
+  target_link_libraries(poc-${NAME} PRIVATE oto)
 
-  add_test(NAME poc-yaml-create COMMAND poc-yaml)
-  add_test(NAME poc-yaml-compare COMMAND ${CMAKE_COMMAND} -E compare_files ${CMAKE_CURRENT_SOURCE_DIR}/test/poc-yaml.yaml poc-yaml.yaml)
-  set_tests_properties(poc-yaml-compare PROPERTIES DEPENDS poc-yaml-create)
+  add_test(NAME poc-${NAME}-create COMMAND poc-${NAME})
+  add_test(NAME poc-${NAME}-compare COMMAND ${CMAKE_COMMAND} -E compare_files ${CMAKE_CURRENT_SOURCE_DIR}/test/poc-${NAME}.yaml poc-${NAME}.yaml)
+  set_tests_properties(poc-${NAME}-compare PROPERTIES DEPENDS poc-${NAME}-create)
 endfunction()
 
-dumper()
+dumper(assets)
+dumper(yaml)
