moving poc code to a non-test place

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,20 +21,5 @@ add_library(oto STATIC)
 target_sources(oto PRIVATE src/main.cpp src/renderer.cpp)
 target_link_libraries(oto PUBLIC casein-sdl oto-headers)
 
-add_executable(poc MACOSX_BUNDLE WIN32)
-target_sources(poc PRIVATE test/poc.cpp)
-target_link_libraries(poc PRIVATE oto)
+add_subdirectory(poc)
 
-function(dumper NAME)
-  add_executable(poc-${NAME})
-  target_sources(poc-${NAME} PRIVATE test/poc-${NAME}.cpp)
-  target_link_libraries(poc-${NAME} PRIVATE oto-headers)
-
-  add_test(NAME poc-${NAME}-create COMMAND poc-${NAME})
-  add_test(NAME poc-${NAME}-compare COMMAND ${CMAKE_COMMAND} -E compare_files --ignore-eol ${CMAKE_CURRENT_SOURCE_DIR}/test/poc-${NAME}.yaml poc-${NAME}.yaml)
-  set_tests_properties(poc-${NAME}-compare PROPERTIES DEPENDS poc-${NAME}-create)
-endfunction()
-
-dumper(action)
-dumper(assets)
-dumper(yaml)
