--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,9 @@ target_sources(oto PRIVATE src/main.cpp)
 target_link_libraries(oto PUBLIC oto-headers)
 
 if (${CMAKE_SYSTEM_NAME} STREQUAL "WASI")
-  target_link_libraries(oto PUBLIC casein)
+  target_compile_options(oto PUBLIC -fno-exceptions)
+  target_sources(oto PRIVATE wasm/extern.cpp)
+  target_link_libraries(oto PUBLIC casein c++abi)
   target_link_options(oto PUBLIC -Wl,--allow-undefined-file=${CMAKE_CURRENT_SOURCE_DIR}/wasm/extern.syms)
 else()
   find_package(SDL2 REQUIRED)
