--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,9 @@ if (${CMAKE_SYSTEM_NAME} STREQUAL "WASI")
   target_compile_options(oto PUBLIC -fno-exceptions)
   target_sources(oto PRIVATE wasm/extern.cpp)
   target_link_libraries(oto PUBLIC casein c++abi)
-  target_link_options(oto PUBLIC -Wl,--allow-undefined-file=${CMAKE_CURRENT_SOURCE_DIR}/wasm/extern.syms -mexec-model=reactor)
+  target_link_options(oto PUBLIC
+    -Wl,--allow-undefined-file=${CMAKE_CURRENT_SOURCE_DIR}/wasm/extern.syms
+    -mexec-model=reactor)
 else()
   find_package(SDL2 REQUIRED)
   target_sources(oto PRIVATE sdl/renderer.cpp)
